Fixed forEach added ability to display all tasks from response

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -8,6 +8,13 @@
             Task Name:<input type="text" id="task-name">
             <button type="button" id="submit-task-form">Submit</button>
         </div>
+        <div id='task-list'>
+            
+        </div>
+
+
+
+
         <script src="./scripts/main.js"></script>
     </body>
 </html>
