--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,20 +1,26 @@
 <html>
-    <head>
-        <link rel="stylesheet" href="./css/styles.css">
-    </head>
-    <body>
-        <h1 id="main-title">To Do App</h1>
-        <div id="task-form">
-            Task Name:<input type="text" id="task-name">
-            <button type="button" id="submit-task-form">Submit</button>
-        </div>
-        <div id='task-list'>
-            
-        </div>
+
+<head>
+    <link rel="stylesheet" href="./css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <h1 id="main-title">To Do App</h1>
+
+    <div id="task-form">
+        Task Name:<input type="text" id="task-name">
+        <button type="button" id="submit-task-form">Submit</button>
+    </div>
+
+    <div id='task-list'>
+
+    </div>
+
+    <div onclick="imageClick()"><img src='resources/add_button.png' id='add-task-button'></div>
 
 
+    <script src="./scripts/index.js"></script>
+</body>
 
-
-        <script src="./scripts/main.js"></script>
-    </body>
 </html>
