--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -8,18 +8,18 @@
 <body>
     <h1 id="main-title">To Do App</h1>
 
-    <div id="task-form" class="d-none">
+    <div id="task-form" class="add-element d-none">
         Task Name:<input type="text" id="task-name">
         <button type="button" id="submit-task-form">Submit</button>
     </div>
 
-    <div id='task-list'>
+    <div id='task-list' class="display-element">
 
     </div>
 
     <div onclick="imageClick()">
-        <img src='resources/add_button.png' class='task-buttons' id='add-task-button'>
-        <img src='resources/cancel_button.png' class='task-buttons d-none' id='cancel-task-button'>
+        <img src='resources/add_button.png' class='task-buttons display-element' id='add-task-button'>
+        <img src='resources/cancel_button.png' class='task-buttons add-element d-none' id='cancel-task-button'>
     </div>
 
 
