Refactored and changed minor thigns after peer code review

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -7,7 +7,9 @@
 
 <body>
     <h1 id="main-title">To Do App</h1>
+    <div id="taskbar">
 
+    </div>
     <div id="task-form" class="add-element d-none">
         Task Name:<input type="text" id="task-name">
         <button type="button" id="submit-task-form">Submit</button>
@@ -18,7 +20,7 @@
     </div>
 
     <div onclick="imageClick()">
-        <img src='resources/add_button.png' class='task-buttons display-element' id='add-task-button'>
+        <img src='resources/add_button.png' class='task-buttons display-element' id='task-button'>
     </div>
 
 
