Added the 'due date' field to the add task form

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -11,6 +11,7 @@
     </div>
     <div id="task-form" class="add-element d-none">
         Task Name:<input type="text" id="task-name">
+        <input type="date" id="task-due" value="2018-07-22" min="2018-01-01" max="2018-12-31">
         <button type="button" id="submit-task-form">Submit</button>
     </div>
 
