refactored setupList() for no refresh on completed updates. Started grid layout

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -12,12 +12,12 @@
         <button type="button" id="submit-task-form">Submit</button>
     </div>
 
-    <div id='task-list' class="display-element">
+    <div id='task-list'>
 
     </div>
 
     <div onclick="imageClick()">
-        <img src='resources/add_button.png' class='task-buttons display-element' id='task-button'>
+        <img src='resources/add_button.png' class='task-buttons' id='task-button'>
     </div>
 
 
