--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -12,7 +12,7 @@
         <button type="button" id="submit-task-form">Submit</button>
     </div>
 
-    <div id='task-list'>
+    <div id="task-list" class='list'>
 
     </div>
 
