--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -10,21 +10,23 @@
         <h1 id="main-title">To Do App</h1>
     </div>
     <div id="task-form" class="task-form add-element d-none">
-        Task Name:<input type="text" id="task-name">
+        Task Name: <input type="text" id="task-name">
         <input type="date" id="task-due" value="2018-07-22" min="2018-01-01" max="2018-12-31"><br><br>
         <button type="button" id="submit-task-form">Submit</button>
     </div>
+    <div id="task-empty">
 
+    </div>
     <div id="task-list" class='list'>
 
     </div>
 
-    <div onclick="imageClick()">
+    <div onclick="imageClick() ">
         <img src='resources/add_button.png' class='task-buttons' id='task-button'>
     </div>
 
 
-    <script src="./scripts/index.js"></script>
+    <script src="./scripts/index.js "></script>
 </body>
 
 </html>
