Completed tasks now display separately from uncompleted

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -17,7 +17,12 @@
     <div id="task-empty">
 
     </div>
-    <div id="task-list" class='list'>
+    <h3>Uncompleted Tasks</h3>
+    <div id="uncompleted-task-list" class='list'>
+
+    </div>
+    <h3>Completed Tasks</h3>
+    <div id="completed-task-list" class='list'>
 
     </div>
 
