Changed the way that the imageClick hiding/showing works

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -9,20 +9,20 @@
     <div id="main-title-container" class="center-block">
         <h1 id="main-title">To Do App</h1>
     </div>
-    <div id="task-form" class="task-form add-element d-none">
+    <div id="task-form" class="second-page task-form add-element d-none">
         Task Name: <input type="text" id="task-name">
         <input type="date" id="task-due" value="2018-07-22" min="2018-01-01" max="2018-12-31"><br><br>
         <button type="button" id="submit-task-form">Submit</button>
     </div>
-    <div id="task-empty">
+    <div id="task-empty" class="first-page">
 
     </div>
-    <h3>Uncompleted Tasks</h3>
-    <div id="uncompleted-task-list" class='list'>
+    <h3 class="first-page">Uncompleted Tasks</h3>
+    <div id="uncompleted-task-list" class="list first-page">
 
     </div>
-    <h3>Completed Tasks</h3>
-    <div id="completed-task-list" class='list'>
+    <h3 class="first-page">Completed Tasks</h3>
+    <div id="completed-task-list" class="list first-page">
 
     </div>
 
